--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -53,6 +53,7 @@ body {
   color: var(--text);
   overflow-x: hidden;
   font-family: 'PP Neue Montreal', 'Arial Narrow', Arial, sans-serif;
+  font-display: swap;
   font-weight: 400;
   transition: background 1s ease, color 1.3s ease;
 }
