--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -272,6 +272,7 @@ select {
         min-width: 100vw;
         z-index: 0;
         height: 100dvh;
+        padding: 24px 12px;
         .logo-title{
             height: 100%;
             display: flex;
