--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -117,7 +117,8 @@ nav {
   width: 100%;
 }
 
-h1 {
+h1,
+h2 {
   $widthA: 100vw;
   font-weight: 500;
   line-height: 95%;
@@ -129,9 +130,7 @@ h1 {
   color: var(--text)
 }
 
-h2 {
-  font-size: calc((var(--widthA))/35);
-}
+h2 {}
 
 
 p {
@@ -296,7 +295,7 @@ img {
 
 
 
-@media (orientation: portrait) {
+@media screen and (max-width: 767px) {
 
   .mobile {
     display: block;
@@ -309,11 +308,12 @@ img {
 
 
   .wrapper {
-    position: fixed;
+
     padding: 0;
     z-index: 999;
     overflow-y: scroll;
-    height: 100dvh;
+    min-height: 100dvh;
+    height: fit-content;
     width: 100%;
     background-color: var(--bg);
     display: flex;
@@ -321,6 +321,7 @@ img {
 
     .mobile {
       display: flex;
+
 
       a {
         background-color: var(--bg-third);
@@ -335,6 +336,7 @@ img {
       display: none;
     }
 
+
     * {
       z-index: 999;
 
@@ -342,11 +344,39 @@ img {
 
     h1 {
       padding: 1rem 8px;
+      margin-bottom: 0;
       font-size: xx-large;
+      letter-spacing: -.25px;
+      &.headline {
+        font-size: 6em;
+        letter-spacing: -3px;
+      }
+    }
+
+    h2 {
+      padding: 1rem ;
+      font-size: xx-large;
+      line-height: 100%;
+      margin-bottom: 0rem;
+      letter-spacing: -.25px;
+    }
+
+
+    p,
+    h3 {
+      font-size: 1.25em;
+      padding: 0 1rem;
+      margin-bottom: 1em;
+      line-height: 120%;
     }
 
     .content-wrapper {
       flex-wrap: wrap;
+      margin-bottom: 1em;
+      border-radius: 1.5em;
+      max-height: 50dvh;
+      aspect-ratio: 14/9;
+      overflow: hidden;
     }
 
     .half {
@@ -354,7 +384,36 @@ img {
 
       .xl {
         width: 100%;
+
+
+
+        p,
+        h3 {
+          font-size: 1.25em;
+          padding: 0 1rem;
+          margin-bottom: 1em;
+        }
       }
+
+    }
+  }
+  .cta-hero {
+    display: flex;
+    width: 100%;
+    min-height: 6rem;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--accent);
+    font-size: xx-large;
+    letter-spacing: -.03em;
+    border-radius: 80px;
+    margin: .125rem 0 ;
+    color: var(--white);
+    cursor: url(/cursor1.png), auto;
+  
+    &:hover {
+      background-color: var(--accent2);
+      color: var(--black);
     }
   }
 }
