--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -22,8 +22,10 @@
         font-size: 1em;
     }
 
-    h3 {
-        font-size: 1.25em;
+    .cases-wrapper h3 {
+        font-size: 1.5em;
+        line-height: 100%;
+        margin: 0;
     }
 
     /* Style the scrollbar background */
@@ -91,7 +93,7 @@
 
     a {
         background-color: transparent;
-        
+
     }
 
     .logo-title {
@@ -159,7 +161,7 @@ nav.list {
 .cta {
     color: var(--bg-sec);
     background-color: var(--text);
-    
+
 }
 
 
@@ -168,7 +170,7 @@ nav.list {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    
+
     border-radius: 20px;
     transition: background-color 500ms ease-in-out;
 
@@ -184,7 +186,7 @@ nav.list {
     grid-column-gap: 7px;
     grid-row-gap: 7px;
     padding: 0px;
-    
+
     border-radius: 20px;
     transition: background-color 400ms ease-in-out;
 
@@ -212,11 +214,12 @@ a.case-link {
         font-size: 15px;
         width: 100%;
     }
-    #p{
+
+    #p {
         transition: all 300ms ease-out;
     }
 
-    svg{
+    svg {
         background-color: var(--bg-sec);
         border-radius: 12px;
         height: 100%;
@@ -271,22 +274,61 @@ select {
     }
 }
 
-@media (orientation: portrait)  { 
-    .header{
+.header-additional {
+    box-sizing: border-box;
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    bottom: 20px;
+    max-width: 400px;
+    gap: 10px;
+    padding-right: 25px;
+
+    p {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header {
         min-width: 100vw;
         z-index: 0;
         height: 100dvh;
         padding: 24px 12px;
-        .logo-title{
+
+        h1.mobile{
+            letter-spacing: -.25px;
+        }
+
+        .logo-title {
             height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
             padding-bottom: 20px;
             top: 0;
-            
+
         }
-        
+
+        .cases-wrapper h3 {
+            font-size: 2rem;
+            letter-spacing: -.25px;
+        }
+    
     }
 
+    .header-additional {
+        box-sizing: border-box;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 100%;
+        gap: .5rem;
+        margin-top: 2rem;
+        padding-right: 25px;
+
+        p {
+            margin: 0;
+        }
+    }
 }
