--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -348,13 +348,13 @@ img {
       font-size: xx-large;
       letter-spacing: -.25px;
       &.headline {
-        font-size: 6em;
+        font-size: 5.5em;
         letter-spacing: -3px;
       }
     }
 
     h2 {
-      padding: 1rem ;
+      padding: 1rem .5rem;
       font-size: xx-large;
       line-height: 100%;
       margin-bottom: 0rem;
@@ -365,7 +365,7 @@ img {
     p,
     h3 {
       font-size: 1.25em;
-      padding: 0 1rem;
+      padding: 0 .5rem;
       margin-bottom: 1em;
       line-height: 120%;
     }
@@ -390,7 +390,7 @@ img {
         p,
         h3 {
           font-size: 1.25em;
-          padding: 0 1rem;
+          padding: 0 .75rem;
           margin-bottom: 1em;
         }
       }
