image scroll container fix

--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -374,7 +374,7 @@ img {
       flex-wrap: wrap;
       margin-bottom: 1em;
       border-radius: 1.5em;
-      max-height: 30dvh;
+      max-height: 40vh;
       overflow: hidden;
     }
 
