--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -279,7 +279,7 @@ select {
     position: absolute;
     display: flex;
     flex-wrap: wrap;
-    bottom: 20px;
+    top: 90%;
     max-width: 400px;
     gap: 10px;
     padding-right: 25px;
