--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -276,12 +276,13 @@ select {
 
 .header-additional {
     box-sizing: border-box;
-    position: absolute;
+    position: static;
     display: flex;
     flex-wrap: wrap;
     top: 90%;
     max-width: 400px;
     gap: 10px;
+    margin-top: 2vw;
     padding-right: 25px;
 
     p {
