--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -6,11 +6,11 @@
     left: 0;
     width: 300px;
     max-width: 400px;
-    min-height: 100vh;
+
     height: 100vh;
     display: flex;
     flex-wrap: wrap;
-    align-content: flex-start;
+    align-content: space-between;
     justify-content: space-between;
     gap: 1rem;
     align-items: flex-start;
@@ -48,7 +48,12 @@
 }
 
 
+.header-inner-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
 
+}
 .logo {
     position: relative;
     width: 100%;
@@ -58,7 +63,6 @@
     transition: all ease-in-out 2s;
     border-radius: 20px;
     overflow: hidden;
-    opacity: 1;
 
     p {
         transition: all ease-in-out 300ms;
@@ -320,6 +324,13 @@ select {
             letter-spacing: -.25px;
         }
 
+    }
+
+    .header-inner-wrapper{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+    
     }
 
     .header-additional {
