--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -223,8 +223,11 @@ button {
 }
 
 iframe {
+  width: 90%;
   border-radius: 20px;
-  max-height: 70vh;
+  height: auto;
+  min-height: 400px;
+  aspect-ratio: 16/9;
   overflow: hidden;
   animation: fade-in 1s ease-in-out;
 }
